--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push",
     "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push",
     "major": "git push && npm version major -m \"New major version\" && npm publish && git push",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jest.config.js",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "date-fns": "^2.14.0",
+    "jest": "^26.0.1",
+    "jest-chain": "^1.1.5",
+    "jest-extended": "^0.11.5",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "remove-markdown": "^0.3.0"
