--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push",
     "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push",
     "major": "git push && npm version major -m \"New major version\" && npm publish && git push",
+    "lint": "eslint src/** spec/**",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:fix:dry": "npm run lint -- --fix-dry-run",
     "test": "jest --config jest.config.js",
     "test:watch": "npm run test -- --watch"
   },
@@ -20,9 +23,6 @@
   "license": "MIT",
   "dependencies": {
     "date-fns": "^2.14.0",
-    "jest": "^26.0.1",
-    "jest-chain": "^1.1.5",
-    "jest-extended": "^0.11.5",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "remove-markdown": "^0.3.0"
@@ -31,6 +31,17 @@
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.1",
     "@babel/node": "^7.10.1",
-    "@babel/preset-env": "^7.10.1"
+    "@babel/preset-env": "^7.10.1",
+    "@types/jest": "^25.2.3",
+    "babel-jest": "^26.0.1",
+    "eslint": "^7.1.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^26.0.1",
+    "jest-chain": "^1.1.5",
+    "jest-extended": "^0.11.5"
   }
 }
