--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "node": "12.x",
     "npm": "6.14.4"
   },
+  "directories": {
+    "lib": "./lib"
+  },
   "scripts": {
     "build": "babel src --out-dir lib",
     "prepare": "npm run build",
