--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "npm": "6.14.4"
   },
   "directories": {
-    "lib": "./lib"
+    "lib": "./"
   },
   "scripts": {
-    "build": "babel src --out-dir lib",
+    "build": "babel src --out-dir ./",
     "prepare": "npm run build",
     "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push",
     "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push",
