--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "scripts": {
     "build": "babel src --out-dir ./",
     "prepare": "npm run build",
-    "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push",
-    "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push",
-    "major": "git push && npm version major -m \"New major version\" && npm publish && git push",
+    "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push -u origin HEAD --tags",
+    "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push -u origin HEAD --tags",
+    "major": "git push && npm version major -m \"New major version\" && npm publish && git push -u origin HEAD --tags",
     "lint": "eslint src/** spec/**",
     "lint:fix": "npm run lint -- --fix",
     "lint:fix:dry": "npm run lint -- --fix-dry-run",
@@ -32,25 +32,25 @@
   },
   "license": "MIT",
   "dependencies": {
-    "date-fns": "^2.14.0",
-    "lodash": "^4.17.15",
-    "md5": "^2.2.1",
+    "date-fns": "^2.15.0",
+    "lodash": "^4.17.20",
+    "md5": "^2.3.0",
     "remove-markdown": "^0.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.3",
-    "@babel/core": "^7.10.3",
-    "@babel/node": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@types/jest": "^26.0.1",
-    "babel-jest": "^26.1.0",
-    "eslint": "^7.3.1",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
+    "@types/jest": "^26.0.10",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.1.0",
+    "jest": "^26.4.0",
     "jest-chain": "^1.1.5",
     "jest-extended": "^0.11.5"
   }
