--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "linna-util",
   "version": "5.0.19",
   "description": "",
-  "main": "lib/index.js",
+  "main": "index.js",
   "directories": {
     "lib": "./"
   },
+  "author": {
+    "name": "Jerry Jäppinen",
+    "url": "https://github.com/jerryjappinen"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jerryjappinen/linna-util.git"
+  },
+  "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir ./",
     "clean": "git clean -f",
@@ -20,15 +29,6 @@
     "test": "jest --config jest.config.js",
     "test:watch": "npm run test -- --watch"
   },
-  "author": {
-    "name": "Jerry Jäppinen",
-    "url": "https://github.com/jerryjappinen"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jerryjappinen/linna-util.git"
-  },
-  "license": "MIT",
   "dependencies": {
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
