--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "linna-util",
   "version": "5.0.21",
   "description": "",
-  "main": "index.js",
-  "type": "module",
-  "directories": {
-    "lib": "./"
-  },
+  "main": "dist/linna-util.cjs.js",
+  "module": "dist/linna-util.esm.js",
+  "browser": "dist/linna-util.umd.js",
+  "files": [
+    "src",
+    "dist"
+  ],
   "author": {
     "name": "Jerry Jäppinen",
     "url": "https://github.com/jerryjappinen"
@@ -17,9 +19,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir ./",
-    "clean": "git clean -f",
-    "clean:dry": "git clean -n",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "prepare": "npm run build",
     "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push -u origin HEAD --tags",
     "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push -u origin HEAD --tags",
@@ -30,7 +31,7 @@
     "test": "jest --config jest.config.js",
     "test:watch": "npm run test -- --watch"
   },
-  "dependencies": {
+  "peerDependencies": {
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
@@ -38,20 +39,19 @@
     "remove-markdown": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0",
-    "@types/jest": "^26.0.10",
-    "babel-jest": "^26.3.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/jest": "^26.0.24",
     "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^27.0.5",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "jest": "^27.5.1",
     "jest-chain": "^1.1.5",
-    "jest-extended": "^0.11.5"
+    "jest-extended": "^0.11.5",
+    "rollup": "^2.77.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   }
 }
