--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "peerDependencies": {
     "date-fns": "^2.28.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "parse-csv": "^0.2.0",
     "remove-markdown": "^0.5.0"
