--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:w": "rollup -c -w",
     "dev": "vitest",
     "test": "vitest run",
-    "prepare": "npm run build",
+    "prepare": "npm run lint && npm run test && npm run build",
     "patch": "git push && npm version patch -m \"New patch version\" && npm publish && git push -u origin HEAD --tags",
     "minor": "git push && npm version minor -m \"New minor version\" && npm publish && git push -u origin HEAD --tags",
     "major": "git push && npm version major -m \"New major version\" && npm publish && git push -u origin HEAD --tags",
