--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "linna-util",
   "version": "6.2.4",
   "description": "",
-  "main": "dist/linna-util.cjs.js",
-  "module": "dist/linna-util.esm.js",
-  "browser": "dist/linna-util.umd.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.umd.js",
   "files": [
     "src",
     "dist"
