--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
   "files": [
+    "dist",
     "src",
-    "dist"
+    "scripts"
   ],
   "author": {
     "name": "Jerry Jäppinen",
@@ -29,7 +30,8 @@
     "major": "git push && npm version major -m \"New major version\" && npm publish && git push -u origin HEAD --tags",
     "lint": "eslint src/** spec/**",
     "lint:fix": "npm run lint -- --fix",
-    "lint:fix:dry": "npm run lint -- --fix-dry-run"
+    "lint:fix:dry": "npm run lint -- --fix-dry-run",
+    "postinstall": "node scripts/postinstall.js"
   },
   "peerDependencies": {
     "date-fns": "^2.28.0",
@@ -50,6 +52,10 @@
     "eslint-plugin-standard": "^5.0.0",
     "rollup": "^2.77.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "vitest": "^0.18.1"
+  },
+  "dependencies": {
+    "mv": "^2.1.1"
   }
 }
