--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "linna-util",
-  "version": "6.3.1",
+  "version": "6.3.0",
   "description": "",
-  "main": "index.cjs.js",
-  "module": "index.esm.js",
-  "browser": "index.umd.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.umd.js",
   "files": [
     "dist",
     "src",
-    "scripts",
     "moduleNames.js",
     "contentful.js",
     "src.js"
@@ -34,8 +33,7 @@
     "major": "git push && npm version major -m \"New major version\" && npm publish && git push -u origin HEAD --tags",
     "lint": "eslint src/** spec/**",
     "lint:fix": "npm run lint -- --fix",
-    "lint:fix:dry": "npm run lint -- --fix-dry-run",
-    "postinstall": "node scripts/postinstall.js"
+    "lint:fix:dry": "npm run lint -- --fix-dry-run"
   },
   "peerDependencies": {
     "date-fns": "^2.28.0",
