--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@vanillaes/csv": "^3.0.1",
+    "gravatar-url": "^4.0.1",
     "md5-es": "^1.8.2",
     "mv": "^2.1.1",
     "remove-markdown": "^0.5.0",
